--- a/index.html
+++ b/index.html
@@ -26,13 +26,67 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="currentDay" class="lead">INSERT CURRENT DATE HERE</p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="hour col-1">9AM</div>
+        <textarea class="col-10"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row">
+        <div class="hour col-1">10AM</div>
+        <textarea class="col-10"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row">
+        <div class="hour col-1">11AM</div>
+        <textarea class="col-10"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row">
+        <div class="hour col-1">12PM</div>
+        <textarea class="col-10"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row">
+        <div class="hour col-1">1PM</div>
+        <textarea class="col-10"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row">
+        <div class="hour col-1">2PM</div>
+        <textarea class="col-10"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row">
+        <div class="hour col-1">3PM</div>
+        <textarea class="col-10"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row">
+        <div class="hour col-1">4PM</div>
+        <textarea class="col-10"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row">
+        <div class="hour col-1">5PM</div>
+        <textarea class="col-10"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="assets/script.js"></script>
   </body>
 </html>
