--- a/index.html
+++ b/index.html
@@ -31,56 +31,56 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="row">
-        <div class="hour col-1">9AM</div>
-        <textarea class="col-10"></textarea>
+        <div class="hour col-md-1">9AM</div>
+        <textarea class="col-md-10"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
-        <div class="hour col-1">10AM</div>
-        <textarea class="col-10"></textarea>
+        <div class="hour col-md-1">10AM</div>
+        <textarea class="col-md-10"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
-        <div class="hour col-1">11AM</div>
-        <textarea class="col-10"></textarea>
+        <div class="hour col-md-1">11AM</div>
+        <textarea class="col-md-10"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
-        <div class="hour col-1">12PM</div>
-        <textarea class="col-10"></textarea>
+        <div class="hour col-md-1">12PM</div>
+        <textarea class="col-md-10"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
-        <div class="hour col-1">1PM</div>
-        <textarea class="col-10"></textarea>
+        <div class="hour col-md-1">1PM</div>
+        <textarea class="col-md-10"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
-        <div class="hour col-1">2PM</div>
-        <textarea class="col-10"></textarea>
+        <div class="hour col-md-1">2PM</div>
+        <textarea class="col-md-10"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
-        <div class="hour col-1">3PM</div>
-        <textarea class="col-10"></textarea>
+        <div class="hour col-md-1">3PM</div>
+        <textarea class="col-md-10"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
-        <div class="hour col-1">4PM</div>
-        <textarea class="col-10"></textarea>
+        <div class="hour col-md-1">4PM</div>
+        <textarea class="col-md-10"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
-        <div class="hour col-1">5PM</div>
-        <textarea class="col-10"></textarea>
+        <div class="hour col-md-1">5PM</div>
+        <textarea class="col-md-10"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
     </div>
