--- a/index.html
+++ b/index.html
@@ -32,55 +32,55 @@
       <!-- Timeblocks go here -->
       <div class="row">
         <div class="hour col-md-1">9AM</div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 past"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
         <div class="hour col-md-1">10AM</div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 past"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
         <div class="hour col-md-1">11AM</div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 past"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
         <div class="hour col-md-1">12PM</div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 past"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
         <div class="hour col-md-1">1PM</div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 past"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
         <div class="hour col-md-1">2PM</div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 past"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
         <div class="hour col-md-1">3PM</div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 past"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
         <div class="hour col-md-1">4PM</div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 past"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row">
         <div class="hour col-md-1">5PM</div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 past"></textarea>
         <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
     </div>
