--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- Timeblocks go here -->
       <div class="row">
         <div class="hour col-md-1">9AM</div>
-        <textarea class="col-md-10 past" data-time="9"></textarea>
+        <textarea name="note" class="col-md-10 past" data-time="9"></textarea>
         <button id="9" class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
@@ -40,7 +40,7 @@
 
       <div class="row">
         <div class="hour col-md-1">10AM</div>
-        <textarea class="col-md-10 past" data-time="10"></textarea>
+        <textarea name="note" class="col-md-10 past" data-time="10"></textarea>
         <button id="10" class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
@@ -48,7 +48,7 @@
 
       <div class="row">
         <div class="hour col-md-1">11AM</div>
-        <textarea class="col-md-10 past" data-time="11"></textarea>
+        <textarea name="note" class="col-md-10 past" data-time="11"></textarea>
         <button id="11" class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
@@ -56,7 +56,7 @@
 
       <div class="row">
         <div class="hour col-md-1">12PM</div>
-        <textarea class="col-md-10 past" data-time="12"></textarea>
+        <textarea name="note" class="col-md-10 past" data-time="12"></textarea>
         <button id="12" class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
@@ -64,7 +64,7 @@
 
       <div class="row">
         <div class="hour col-md-1">1PM</div>
-        <textarea class="col-md-10 past" data-time="13"></textarea>
+        <textarea name="note" class="col-md-10 past" data-time="13"></textarea>
         <button id="13" class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
@@ -72,7 +72,7 @@
 
       <div class="row">
         <div class="hour col-md-1">2PM</div>
-        <textarea class="col-md-10 past" data-time="14"></textarea>
+        <textarea name="note" class="col-md-10 past" data-time="14"></textarea>
         <button id="14" class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
@@ -80,7 +80,7 @@
 
       <div class="row">
         <div class="hour col-md-1">3PM</div>
-        <textarea class="col-md-10 past" data-time="15"></textarea>
+        <textarea name="note" class="col-md-10 past" data-time="15"></textarea>
         <button id="15" class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
@@ -88,7 +88,7 @@
 
       <div class="row">
         <div class="hour col-md-1">4PM</div>
-        <textarea class="col-md-10 past" data-time="16"></textarea>
+        <textarea name="note" class="col-md-10 past" data-time="16"></textarea>
         <button id="16" class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
@@ -96,7 +96,7 @@
 
       <div class="row">
         <div class="hour col-md-1">5PM</div>
-        <textarea class="col-md-10 past" data-time="17"></textarea>
+        <textarea name="note" class="col-md-10 past" data-time="17"></textarea>
         <button id="17" class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
